Fixes navigational error with drizzle

--- a/app/src/components/BackgroundImage.scss
+++ b/app/src/components/BackgroundImage.scss
@@ -1,5 +1,5 @@
 .BackgroundImage {
-  content: "";
+  content: '';
   background-image: var(--image);
   background-position: center center;
   background-size: cover;
