--- a/app/src/components/Section.scss
+++ b/app/src/components/Section.scss
@@ -1,10 +1,7 @@
-
 .SectionComponent {
-
   // Add light border if two white
   // sections next to each other.
   .is-white + &.is-white {
-    border-top: 1px solid #F0F0F0;
+    border-top: 1px solid #f0f0f0;
   }
-
 }
