--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -2,26 +2,27 @@
 
 // COLORS
 $primary: #00d1b2;
-$info: #209CEE;
-$success: #23D160;
-$warning: #FFDD57;
-$danger: #FF3860;
-$light: #F5F5F5;
+$info: #209cee;
+$success: #23d160;
+$warning: #ffdd57;
+$danger: #ff3860;
+$light: #f5f5f5;
 $dark: #363636;
 
 // TEXT
-$text: #4A4A4A;
-$link: #3273DC;
-$body-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+$text: #4a4a4a;
+$link: #3273dc;
+$body-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+  'Droid Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 $title-family: false;
 $button-family: false;
 
 // BREAKPOINTS
 $gap: 32px;
 $tablet: 769px;
-$desktop: 960px + (2*$gap);
-$widescreen: 1152px + (2*$gap);
-$fullhd: 1344px + (2*$gap);
+$desktop: 960px + (2 * $gap);
+$widescreen: 1152px + (2 * $gap);
+$fullhd: 1344px + (2 * $gap);
 $widescreen-enabled: true;
 $fullhd-enabled: false;
 
@@ -34,7 +35,7 @@ $section-padding-large: 9rem 1.5rem;
 // https://bit.ly/30UvE5O
 
 // IMPORT BULMA
-@import "~bulma/bulma.sass";
+@import '~bulma/bulma.sass';
 
 // IMPORT FONT AWESOME
-@import url("https://use.fontawesome.com/releases/v5.10.1/css/all.css");
+@import url('https://use.fontawesome.com/releases/v5.10.1/css/all.css');
