Updates to allow contract to be created

--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -36,6 +36,7 @@ $section-padding-large: 9rem 1.5rem;
 
 // IMPORT BULMA
 @import '~bulma/bulma.sass';
+@import '~bulma-slider/src/sass/index.sass';
 
 // IMPORT FONT AWESOME
 @import url('https://use.fontawesome.com/releases/v5.10.1/css/all.css');
